WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278560
Take a background assertion for processes having muted capture
https://bugs.webkit.org/show_bug.cgi?id=278560
Summary
Take a background assertion for processes having muted capture
youenn fablet
Reported
2024-08-23 06:28:59 PDT
Take a background assertion for processes having muted capture
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-08-23 06:29:20 PDT
<
rdar://130691389
>
EWS
Comment 2
2024-08-26 12:01:14 PDT
Committed
282757@main
(760a765e8b6f): <
https://commits.webkit.org/282757@main
> Reviewed commits have been landed. Closing PR #32625 and removing active labels.
WebKit Commit Bot
Comment 3
2024-08-27 07:56:21 PDT
Re-opened since this is blocked by
bug 278729
EWS
Comment 4
2024-08-28 09:16:11 PDT
Committed
282845@main
(975fa073536d): <
https://commits.webkit.org/282845@main
> Reviewed commits have been landed. Closing PR #32807 and removing active labels.
EWS
Comment 5
2024-08-30 21:06:41 PDT
Committed
280938.300@safari-7619-branch
(4c7bf8cca700): <
https://commits.webkit.org/280938.300@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1690 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug