Take a background assertion for processes having muted capture rdar://130691389 https://bugs.webkit.org/show_bug.cgi?id=278560

Reviewed by Chris Dumez.

To allow web application doing WebRTC streaming to quickly recover ts camera streaming when moving in the foreground after being backgrounded,
a background assertion is being taken in case a process is doing muted capture.

Manually tested by observing that a WebRTC connection continues sending black frames in a backgrounded tab on iOS.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::updateThrottleState):
* Source/WebKit/UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/282757@main